// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`post - description the description is changing should render correctly 1`] = `
<form
  className="form mb3 pb3"
  onSubmit={[Function]}
>
  <div
    className="form__input-container"
  >
    <FaCheck
      className="icon c-limegreen"
    />
    <input
      autoFocus={true}
      className="text-input"
      onChange={[Function]}
      placeholder="Write a title here"
      type="text"
      value=""
    />
  </div>
  <div
    className="form__input-container"
  >
    <FaCheck
      className="icon c-limegreen"
    />
    <input
      className="text-input"
      id="descriptionInput"
      onChange={[Function]}
      placeholder="Write a small description here"
      type="text"
      value="A new description"
    />
  </div>
  <div
    className="form__input-container"
  >
    <FaCheck
      className="icon c-limegreen"
    />
    <input
      accept="image/*"
      className="text-input"
      onChange={[Function]}
      type="file"
    />
    <div
      className="quarterwidth flex align-items--center justify-content--center mt2"
    />
  </div>
  <div>
    <p>
      What do you want to do today?
    </p>
    <Checkbox
      checked={true}
      handleChange={[Function]}
      label="I want to write the content of the post."
    />
    <Checkbox
      checked={false}
      handleChange={[Function]}
      label="I want to provide an URL for this post (users will be redirected to the provided URL). "
    />
  </div>
  <div
    className="form__input-container"
  >
    <MyEditor
      editorState={Object {}}
      onChange={[Function]}
      placeholder="Write your article here"
      s3FolderName="abc123"
    />
  </div>
  <div>
    <button
      className="button"
    >
      Save Post
    </button>
  </div>
</form>
`;

exports[`post - description the description is too short should render correctly 1`] = `
<form
  className="form mb3 pb3"
  onSubmit={[Function]}
>
  <div
    className="form__input-container"
  >
    <FaCheck
      className="icon c-limegreen"
    />
    <input
      autoFocus={true}
      className="text-input"
      onChange={[Function]}
      placeholder="Write a title here"
      type="text"
      value=""
    />
  </div>
  <div
    className="form__input-container"
  >
    <FaTimes
      className="icon c-warm-peach"
    />
    <input
      className="text-input"
      id="descriptionInput"
      onChange={[Function]}
      placeholder="Write a small description here"
      type="text"
      value="aaaa"
    />
    <p
      className="error"
    >
      Description should be minimum 5 characters long
    </p>
  </div>
  <div
    className="form__input-container"
  >
    <FaCheck
      className="icon c-limegreen"
    />
    <input
      accept="image/*"
      className="text-input"
      onChange={[Function]}
      type="file"
    />
    <div
      className="quarterwidth flex align-items--center justify-content--center mt2"
    />
  </div>
  <div>
    <p>
      What do you want to do today?
    </p>
    <Checkbox
      checked={true}
      handleChange={[Function]}
      label="I want to write the content of the post."
    />
    <Checkbox
      checked={false}
      handleChange={[Function]}
      label="I want to provide an URL for this post (users will be redirected to the provided URL). "
    />
  </div>
  <div
    className="form__input-container"
  >
    <MyEditor
      editorState={Object {}}
      onChange={[Function]}
      placeholder="Write your article here"
      s3FolderName="abc123"
    />
  </div>
  <div>
    <button
      className="button"
    >
      Save Post
    </button>
  </div>
</form>
`;
